--- a/info.html
+++ b/info.html
@@ -6,11 +6,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/info.css">
+    <link rel="stylesheet" href="static/css/info.css">
 
 </head>
 <body>
-    <img src="assets/request/logo.svg" alt="" id="logo">
+    <img src="static/img/logo.svg" alt="" id="logo">
     <div class="container">
         <div class="info_about_neuro">
             <h1>Как работает нейронная сеть?</h1>
