--- a/result.html
+++ b/result.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Результат</title>
-    <link rel="stylesheet" href="css/result.css">
+    <link rel="stylesheet" href="static/css/result.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&family=Montserrat:ital,wght@0,500;1,200&display=swap" rel="stylesheet">
 
 </head>
 <body>
-  <img src="assets/request/logo.svg" alt="" id="logo">
+  <img src="static/img/logo.svg" alt="" id="logo">
    <div class="container">
        <div class="text">
            <h1>Ваш запрос:</h1>
            <p id="request">A beautiful painting of the gold world very huge transparent burning a lonely oak on a hill, dark fantasy, elden ring, hyper detailed, sharp focus, soft light. unreal engine 5 lumen. ray tracing. trending on artstation</p>
        </div>
-      <img src="assets/animation.gif" alt="" id="gif">
+      <img src="static/img/animation.gif" alt="" id="gif">
 
       <div id="progressbar">
         <div></div>
