upload with result

--- a/result.html
+++ b/result.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-  <img src="static/img/logo.svg" alt="" id="logo">
+<img src="static/img/logo.svg" alt="" id="logo">
    <div class="container">
        <div class="text">
            <h1>Ваш запрос:</h1>
@@ -23,5 +23,9 @@
       </div>
        <p id="percentage">30%</p>
    </div>
+    <div class="result">
+        <img id="result_img" src="static/img/gallery/examples/back_0.jpeg" alt="">
+        <a href="request.html" class="again">Ещё раз</a>
+    </div>
 </body>
 </html>
