--- a/gallery.html
+++ b/gallery.html
@@ -28,7 +28,7 @@
             <img id="next_slide" src="static/img/gallery/examples/2.jpeg" alt="">
         </div>
         <p id="description">жаловыалдыоадвлваывоалвылд двыалвыоадл ывалдвоалд</p>
-        <a href="request.html" class="submit">Попробовать</a>
+        <a href="request.html" class="submit">Попробовать нарисовать</a>
 
     </div>
 
