--- a/info.html
+++ b/info.html
@@ -21,6 +21,6 @@
             <p>Здесь должна быть инфа про нейросеть но мне безумно лень что-то придумывать, ок. Допустим, что это она. Настроим шрифт в зависимости от того, насколько много инфы там будет </p>
         </div>
     </div>
-    <a href="request.html" class="submit">Понято-принято</a>
+    <a href="request.html" class="submit">Понятно</a>
 </body>
 </html>
